Added viewTopUsers()
Implemented and added viewTopUsers() as well as two helper functions to
PlaylistCatalog file.